--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p>
           This project was coded by
           <a href="https://github.com/ElenaPre" target="_blank">Vereshchak Olena</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/ElenaPre/SheCodesTest1.git" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
